PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-142_if_else_scope_invalid/gcc-compile.txt
input.c:11:5: error: use of undeclared identifier 'i'
    i=8;
    ^
input.c:12:12: error: use of undeclared identifier 'i'
    return i;
           ^
2 errors generated.

return code: 1
